[tool.poetry]
name = "survey api"
version = "0.1.0"
description = "API for querying survey data"
authors = ["sudden_appearance <kuz.damir.01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.6"
fastapi = "^0.95.2"
pydantic = "^1.10.7"
sqlalchemy = "^2.0.14"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
urllib3 = "^2.0.2"
uvicorn = "^0.22.0"


[tool.poetry.group.stubs.dependencies]
sqlalchemy2-stubs = "^0.0.2a34"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
